fix: color contrast, aria sections, and links from webaim wave

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ button {
 button:hover,
 button:focus {
   background: #068494;
-  color: rgb(20, 22, 65);
+  color: rgb(5, 6, 31);
 }
 
 p {
@@ -172,7 +172,7 @@ body {
   align-content: center;
   flex-wrap: wrap;
   text-align: center;
-  background-color: #c44536;
+  background-color: #c46452;
   padding: 10px;
   margin: 10px;
   min-height: 250px;
